--- a/index.html
+++ b/index.html
@@ -232,5 +232,8 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
+  <!-- Скрипт-->
+  <script src="./js/main.js"></script>
+  
 </body>
 </html>
